--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+    <title>hoverBoord</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="container" id="board"></div>
-<audio class="audio" src="./img/audio.mp3"></audio>
+<!--<audio class="audio" src="../Piano/img/audio.mp3"></audio>-->
 <!--<audio class="audio"  src="./img/mp1.mp3"></audio>-->
-<div class="block"></div>
-<!--<button id="myBtn" onclick="myFunction()"></button>-->
+<button class="btn1">on</button>
+<button class="btn2">off</button>
+<!--<div class="block"></div>-->
+
 <script src="hover.js"></script>
 </body>
 </html>
